--- a/src/main/resources/templates/employees/new.html
+++ b/src/main/resources/templates/employees/new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: head_fragment(title=従業員更新)"></head>
+<head th:replace="common/header :: head_fragment(title=従業員新規登録)"></head>
 
 <body class="h-100 overflow-hidden">
     <div class="row h-100">
@@ -12,22 +12,23 @@
         <div class="mt-3 h-100 col-sm-10">
             <!-- コンテンツ -->
             <div class="container-fluid p-0">
-                <h1 class="h3 mb-3">従業員 更新</h1>
+                <h1 class="h3 mb-3">従業員 新規登録</h1>
             </div>
             <div class="col-12 col-xxl-6">
 
                 <div class="col-xl-12">
                     <div class="card">
-                        <div class="card-header">
-                            パスワードは変更する場合のみ入力してください
-                        </div>
                         <div class="card-body">
-                            <form th:action="@{/employees/{code}/update(code=${employee.code})}" th:object="${employee}" th:method="post">
+                            <form th:action="@{/employees/add}" th:object="${employee}" th:method="post">
                                 <div class="wizard wizard-success mb-4">
                                     <div class="mb-3">
-                                        <label class="form-label">社員番号</label>
+                                        <label class="form-label" for="code">社員番号</label>
                                         <p class="mb-1"></p>
-                                        <label class="form-label" th:text="${employee.code}"></label>
+                                        <div class="col-md-7">
+                                            <input class="form-control" type="text" th:field="*{code}" th:errorclass="err" id="code">
+                                            <span th:errors="*{code}" class="text-danger"></span>
+                                            <span th:if="${codeError} neq null" th:text="${codeError}" class="text-danger"></span>
+                                        </div>
                                     </div>
                                     <div class="mb-3">
                                         <label class="form-label" for="name">氏名</label>
